implemented post controller
